wp-nfs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  wp-service
spec:
  selector:
    app: wp
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp
  labels:
    app: wp
    type: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wp
        image: wordpress:5.3.2
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /var/www/html
            name: wordpress-persistent-storage
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: nfs-pvc-wp
