wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
spec:
  #tls:
  #- hosts:
  #  - cafe.example.com
  #  secretName: cafe-secret
  rules:
  - host: wp-test.alexander.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-service
          servicePort: 80
      #- path: /coffee
      #  backend:
      #    serviceName: coffee-svc
      #    servicePort: 80
